// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should match snapshots for each variant 1`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "lineHeight": 22,
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 2`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "textDecorationLine": "line-through",
        "textDecorationStyle": "solid",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 3`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#fff",
        "fontWeight": "bold",
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 4`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#000C49",
        "fontWeight": "bold",
        "textAlign": "center",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 5`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#000C49",
        "fontWeight": "bold",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 6`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#fff",
        "fontSize": 16,
        "fontWeight": "500",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 7`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#fff",
        "fontSize": 20,
        "fontWeight": "500",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 8`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "fontSize": 42,
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 9`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;

exports[`Text should match snapshots for each variant 10`] = `
<Text
  style={
    [
      {
        "color": "#000C49",
        "fontSize": 16,
        "fontWeight": "600",
      },
      {
        "color": "#fff",
        "opacity": 0.75,
      },
      undefined,
    ]
  }
>
  Lorem ipsum dolor sit amet
</Text>
`;
